add connection modal

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,14 @@ code {
 * {
   box-sizing: border-box;
 }
+
+.ReactModal__Content {
+  top: 50% !important;
+  left: 50% !important;
+  right: auto !important;
+  bottom: auto !important;
+  margin-right: -50% !important;
+  transform: translate(-50%, -50%) !important;
+  padding: 0 !important;
+  border: 0 !important;
+}
